# rust-conventional-commits

./: .editorconfig  .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  deny.toml
src/: commit-lint.rs  commit_msg.rs  core.rs  history.rs  lib.rs  log.rs  prepare-msg.rs  prepare_msg.rs
src/core/: base.rs  commit_message.rs  conventional_commit.rs  history.rs  mod.rs  semantic_version.rs
src/core/semantic_version/: mod.rs  pre_release_type.rs  semantic_version.rs
src/hooks/: commit_msg.rs  mod.rs  prepare_msg.rs
tests/: core.rs  prepare-msg_tests.rs
