[package]
name = "rust-conventional-commits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "con_comm"
path = "src/lib.rs"

[[bin]]
name = "prepare-msg"
path = "src/prepare-msg.rs"

[[bin]]
name = "commit-lint"
path = "src/commit-lint.rs"

[dependencies]
