[package]
name = "rust-conventional-commits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "con_comm"
path = "src/lib.rs"

[[bin]]
name = "prepare-msg"
path = "src/prepare-msg.rs"

[[bin]]
name = "commit-lint"
path = "src/commit-lint.rs"

[dependencies]
regex = "1.10.3"
lazy_static = "1.4.0"
log = "0.4.21"
