[package]
name = "rust-conventional-commits"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "con_comm"
path = "src/lib.rs"

[[bin]]
name = "prepare-msg"
path = "src/prepare-msg.rs"

[[bin]]
name = "commit-lint"
path = "src/commit-lint.rs"

[[bin]]
name = "log"
path = "src/log.rs"

[dependencies]
regex = "1.10.4"
lazy_static = "1.4.0"
log = "0.4.21"
chrono = "0.4.38"
